force-app/main/default/objects/NPN_SOEM_Widen_Link__mdt/NPN_SOEM_Widen_Link__mdt.object-meta.xml
<CustomObject>
    <description>Created for SDS-2695. This metadata type contains the mapping of SOEM Account Ids and their respective Widen redirection link. The SOEM Account ID must be 18 digits.</description>
    <label>NPN SOEM Widen Link</label>
    <pluralLabel>NPN SOEM Widen Links</pluralLabel>
</CustomObject>