force-app/main/default/objects/NPN_SOEM_Widen_Link__mdt/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <description>The SOEM Account Id.</description>
    <inlineHelpText>The SOEM account ID must be 18 digits.</inlineHelpText>
    <label>AccountId</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>