force-app/main/default/objects/NPN_SOEM_Widen_Link__mdt/fields/Portal_Home_Page_Box_Name__c.field-meta.xml
<CustomField>
    <fullName>Portal_Home_Page_Box_Name__c</fullName>
    <inlineHelpText>The portal home page box name such as SALES TOOLS, MARKETING ASSEST</inlineHelpText>
    <label>Portal Home Page Box Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>