force-app/main/default/objects/NPN_SOEM_Widen_Link__mdt/fields/Redirection_URL__c.field-meta.xml
<CustomField>
    <fullName>Redirection_URL__c</fullName>
    <label>Redirection URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>