force-app/main/default/objects/NPN_SOEM_Widen_Link__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>AccountId__c</columns>
    <columns>Portal_Home_Page_Box_Name__c</columns>
    <columns>Redirection_URL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>